[package]
name = "tokio-takconnect"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
parking_lot = "0.12"
rand = "0.8"
log = "0.4"
