[package]
name = "tokio-takconnect"
version = "0.1.2"
edition = "2021"
license = "MIT"
description = "Asynchronous Playtak client"
keywords = ["tak", "game", "client"]
repository = "https://github.com/alion02/tokio-takconnect"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["rt", "time", "sync", "macros"] }
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
parking_lot = "0.12"
rand = "0.8"
log = "0.4"
takparse = "0.5.2"
